--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scheda Personaggio D&D - Valenor</title>
-    <link rel="stylesheet" href="/character-sheet-dnd/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700&family=Lora:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container" id="character-sheet">
         <header id="main-header-grid">
-            <div id="portrait-container">
-                </div>
+            <div id="portrait-container"></div>
             <div id="header-info-container">
                 <div id="name-and-controls">
                     <h1 id="character-name-display"></h1>
@@ -22,44 +21,39 @@
                         <button id="edit-mode-btn" class="btn">Modifica Scheda</button>
                     </div>
                 </div>
-                <div id="details-grid">
-                    </div>
+                <div id="details-grid"></div>
             </div>
         </header>
 
-        <section id="abilities-horizontal-container">
-            </section>
-
         <main id="main-content-grid">
             <div id="column-left">
-                <div id="combat-stats-box">
-                    <div class="main-stats-grid">
-                        <div id="ac-box" class="box stat-box"></div>
-                        <div id="initiative-box" class="box stat-box"></div>
-                        <div id="speed-box" class="box stat-box"></div>
-                    </div>
-                    <div id="hp-box" class="box"></div>
-                    <div class="resources-grid">
-                        <div id="hit-dice-box" class="box"></div>
-                        <div id="death-saves-box" class="box"></div>
-                    </div>
-                </div>
-                <div id="attacks-box" class="box"></div>
+                <div id="key-stats-container"></div>
+                <div id="abilities-container"></div>
             </div>
 
             <div id="column-center">
-                <div id="features-box" class="box"></div>
+                <div class="main-stats-grid">
+                    <div id="ac-box" class="box stat-box"></div>
+                    <div id="initiative-box" class="box stat-box"></div>
+                    <div id="speed-box" class="box stat-box"></div>
+                </div>
+                <div id="hp-box" class="box"></div>
+                <div class="resources-grid">
+                    <div id="hit-dice-box" class="box"></div>
+                    <div id="death-saves-box" class="box"></div>
+                </div>
+                <div id="attacks-box" class="box"></div>
                 <div id="proficiencies-box" class="box"></div>
             </div>
 
             <div id="column-right">
-                <div id="equipment-box" class="box"></div>
-                <div id="spells-box" class="box"></div>
+                 <div id="features-box" class="box"></div>
+                 <div id="equipment-box" class="box"></div>
+                 <div id="spells-box" class="box"></div>
                  <div id="personality-box" class="box"></div>
             </div>
         </main>
     </div>
-
-    <script src="/character-sheet-dnd/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
