Update index, css and js - spell box v1

--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
             <div id="column-right">
                  <div id="features-box" class="box"></div>
                  <div id="equipment-box" class="box"></div>
-                 <div id="spells-box" class="box"></div>
                  <div id="personality-box" class="box"></div>
             </div>
         </main>
+        
+        <section id="spells-section-container" class="box">
+            </section>
     </div>
     <script src="script.js"></script>
 </body>
