--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scheda Personaggio D&D - Valenor</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/components.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -29,8 +32,8 @@
             <div id="column-left">
                 <div id="key-stats-container"></div>
                 <div id="abilities-container"></div>
+                <div id="proficiencies-box" class="box"></div>
             </div>
-
             <div id="column-center">
                 <div class="main-stats-grid">
                     <div id="ac-box" class="box stat-box"></div>
@@ -43,9 +46,7 @@
                     <div id="death-saves-box" class="box"></div>
                 </div>
                 <div id="attacks-box" class="box"></div>
-                <div id="proficiencies-box" class="box"></div>
             </div>
-
             <div id="column-right">
                  <div id="features-box" class="box"></div>
                  <div id="equipment-box" class="box"></div>
@@ -56,6 +57,7 @@
         <section id="spells-section-container" class="box">
             </section>
     </div>
-    <script src="script.js"></script>
+    
+    <script src="js/main.js" type="module"></script>
 </body>
 </html>
