Update new stable version v.0.0.01

--- a/index.html
+++ b/index.html
@@ -35,14 +35,7 @@
                 <div id="proficiencies-box" class="box"></div>
             </div>
             <div id="column-center">
-                <div class="main-stats-grid">
-                    <div id="ac-box" class="box stat-box"></div>
-                    <div id="initiative-box" class="box stat-box"></div>
-                    <div id="speed-box" class="box stat-box"></div>
-                </div>
-                <div id="hp-box" class="box"></div>
-                <div class="resources-grid">
-                    <div id="hit-dice-box" class="box"></div>
+                <div id="main-stats-container"></div> <div id="hp-box" class="box"></div> <div class="resources-grid"> <div id="hit-dice-box" class="box"></div>
                     <div id="death-saves-box" class="box"></div>
                 </div>
                 <div id="attacks-box" class="box"></div>
@@ -55,7 +48,7 @@
         </main>
         
         <section id="spells-section-container" class="box">
-            </section>
+        </section>
     </div>
     
     <script src="js/main.js" type="module"></script>
